Changes in 1.8 (??.??.2011)

 - The loader selection process now consistently checks loader lists in reverse order, so new loaders added to Irrlicht override the internal ones. This applies when adding external mesh, image, scene and archive loaders, image writers, plus node, animator and GUI element factories. 

 - Added getters to retrieve mesh, scene and archive loaders.

 - Added ISceneLoader interface and .irr loader. Users can now add their own scene loaders to the scene manager and use them by calling loadScene.

 - Renamed IGUIElement::bringToBack to sendToBack, like in Windows

 - Send EGET_ELEMENT_CLOSED event when context menues should be closed (thx @ Mloren for reporting).

 - zip archive fixes: Fix directory tags in file list. Fix loading of stream zip files which have file sizes only in the central directory.

 - Added treeview to GUI editor, provided by Armen

 - Added root type for GUI environment

 - Fixed panel scrollbars in GUI editor, reported by Armen

 - Fix b3d loading of files with mixed mesh/bone sections.

 - Fix particle emitters which used integer random numbers so far. The distributions of the particles should be much better (and the code also somewhat faster) now.

 - Add new random method frand: Returns a random number in the interval [0..1] and gives better distributions than using fmodf on the integer number.

 - Add node parameter to saveScene and loadScene. saveScene saves the given node and all descendants to the file (if 0, the full scene is saved as before). loadScene loads all elements of the scene as childs of the given node. As before, 0 would load the file on the top level (scenemanager).

 - Add method to make a filename relative to a given directory.

 - Fix setMesh to correctly update the joints cache.

 - Fix setting transition time of skinned meshes back to 0.

 - Add some getters to IGUIImage: getImage, getColor

 - Fix OpenGL FBODepthTexture to create less overhead

 - Fix MRT disablingunder OpenGL
